more findbugs issues